--- a/index.css
+++ b/index.css
@@ -592,7 +592,140 @@ input:focus, textarea:focus, select:focus
    visibility: hidden;
    z-index: 4;
 }
-@media only screen and (max-width: 1920px)
+@media only screen and (min-width: 1920px) and (max-width: 1920px)
+{
+body
+{
+   background-color: #FFFFFF;
+   background-image: none;
+}
+#wb_Shape2
+{
+   left: 0px;
+   top: 0px;
+   visibility: hidden;
+   display: none;
+   margin: 0;
+}
+#wb_Shape1
+{
+   left: 0px;
+   top: 0px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Image1
+{
+   left: 51px;
+   top: 11px;
+   width: 92px;
+   height: 52px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+   padding: 0;
+}
+#wb_MenuBar1
+{
+   left: 1129px;
+   top: 13px;
+   width: 747px;
+   height: 48px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Shape3
+{
+   left: 18px;
+   top: 157px;
+   visibility: hidden;
+   display: none;
+   margin: 0;
+}
+#wb_Shape4
+{
+   left: 195px;
+   top: 194px;
+   visibility: hidden;
+   display: none;
+   margin: 0;
+}
+#wb_Text1
+{
+   left: 236px;
+   top: 206px;
+   width: 29px;
+   height: 66px;
+   visibility: hidden;
+   display: none;
+}
+#wb_Text1
+{
+   margin: 0;
+   padding: 0;
+}
+#wb_Text2
+{
+   left: 18px;
+   top: 301px;
+   width: 436px;
+   height: 177px;
+   visibility: hidden;
+   display: none;
+}
+#wb_Text2
+{
+   margin: 0;
+   padding: 0;
+}
+#wb_Shape5
+{
+   left: 476px;
+   top: 307px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Shape6
+{
+   left: 884px;
+   top: 345px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Text3
+{
+   left: 949px;
+   top: 360px;
+   width: 15px;
+   height: 118px;
+   visibility: visible;
+   display: inline;
+}
+#wb_Text3
+{
+   margin: 0;
+   padding: 0;
+}
+#wb_Text4
+{
+   left: 492px;
+   top: 527px;
+   width: 936px;
+   height: 236px;
+   visibility: visible;
+   display: inline;
+}
+#wb_Text4
+{
+   margin: 0;
+   padding: 0;
+}
+}
+@media only screen and (max-width: 1919px)
 {
 body
 {
