--- a/shows.css
+++ b/shows.css
@@ -404,3 +404,163 @@ input:focus, textarea:focus, select:focus
 {
    text-align: center;
 }
+#wb_Text1
+{
+   position: absolute;
+   left: 949px;
+   top: 360px;
+   width: 15px;
+   height: 118px;
+   z-index: 5;
+}
+#Shape1
+{
+   width: 1920px;
+   height: 75px;
+}
+#wb_Text2
+{
+   position: absolute;
+   left: 492px;
+   top: 527px;
+   width: 936px;
+   height: 236px;
+   text-align: center;
+   z-index: 6;
+}
+#Shape2
+{
+   width: 969px;
+   height: 578px;
+}
+#Shape3
+{
+   width: 153px;
+   height: 148px;
+}
+#wb_Image1
+{
+   position: absolute;
+   left: 51px;
+   top: 11px;
+   width: 92px;
+   height: 52px;
+   z-index: 1;
+}
+#wb_MenuBar1
+{
+   position: absolute;
+   left: 1129px;
+   top: 13px;
+   width: 747px;
+   height: 48px;
+   z-index: 2;
+}
+#wb_Shape1
+{
+   position: absolute;
+   left: 0px;
+   top: 0px;
+   width: 1920px;
+   height: 75px;
+   z-index: 0;
+}
+#wb_Shape2
+{
+   position: absolute;
+   left: 476px;
+   top: 307px;
+   width: 969px;
+   height: 578px;
+   z-index: 3;
+}
+#wb_Shape3
+{
+   position: absolute;
+   left: 884px;
+   top: 345px;
+   width: 153px;
+   height: 148px;
+   z-index: 4;
+}
+@media only screen
+{
+body
+{
+   background-color: #FFFFFF;
+   background-image: none;
+}
+#wb_Shape1
+{
+   left: 0px;
+   top: 0px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Image1
+{
+   left: 51px;
+   top: 11px;
+   width: 92px;
+   height: 52px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+   padding: 0;
+}
+#wb_MenuBar1
+{
+   left: 1129px;
+   top: 13px;
+   width: 747px;
+   height: 48px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Shape2
+{
+   left: 476px;
+   top: 307px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Shape3
+{
+   left: 884px;
+   top: 345px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Text1
+{
+   left: 949px;
+   top: 360px;
+   width: 15px;
+   height: 118px;
+   visibility: visible;
+   display: inline;
+}
+#wb_Text1
+{
+   margin: 0;
+   padding: 0;
+}
+#wb_Text2
+{
+   left: 492px;
+   top: 527px;
+   width: 936px;
+   height: 236px;
+   visibility: visible;
+   display: inline;
+}
+#wb_Text2
+{
+   margin: 0;
+   padding: 0;
+}
+}
