--- a/index.css
+++ b/index.css
@@ -473,6 +473,94 @@ input:focus, textarea:focus, select:focus
 {
    text-align: left;
 }
+#Shape3
+{
+   border-width: 0;
+   vertical-align: top;
+}
+#wb_Text1 
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   text-align: left;
+}
+#wb_Text1 div
+{
+   text-align: left;
+}
+#wb_Image6
+{
+   vertical-align: top;
+}
+#Image6
+{
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#wb_Image7
+{
+   vertical-align: top;
+}
+#Image7
+{
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#wb_Image8
+{
+   vertical-align: top;
+}
+#Image8
+{
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#wb_Image9
+{
+   vertical-align: top;
+}
+#Image9
+{
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#wb_Text1
+{
+   position: absolute;
+   left: 39px;
+   top: 703px;
+   width: 267px;
+   height: 46px;
+   z-index: 12;
+}
 #Shape1
 {
    width: 1920px;
@@ -482,6 +570,11 @@ input:focus, textarea:focus, select:focus
 {
    width: 431px;
    height: 75px;
+}
+#Shape3
+{
+   width: 215px;
+   height: 6px;
 }
 #wb_Text3
 {
@@ -545,7 +638,7 @@ input:focus, textarea:focus, select:focus
    left: 1478px;
    top: 543px;
    width: 267px;
-   height: 118px;
+   height: 93px;
    z-index: 10;
 }
 #wb_Image5
@@ -556,6 +649,42 @@ input:focus, textarea:focus, select:focus
    width: 197px;
    height: 113px;
    z-index: 9;
+}
+#wb_Image6
+{
+   position: absolute;
+   left: 39px;
+   top: 768px;
+   width: 430px;
+   height: 200px;
+   z-index: 13;
+}
+#wb_Image7
+{
+   position: absolute;
+   left: 495px;
+   top: 768px;
+   width: 430px;
+   height: 200px;
+   z-index: 14;
+}
+#wb_Image8
+{
+   position: absolute;
+   left: 950px;
+   top: 768px;
+   width: 430px;
+   height: 200px;
+   z-index: 15;
+}
+#wb_Image9
+{
+   position: absolute;
+   left: 1406px;
+   top: 768px;
+   width: 430px;
+   height: 200px;
+   z-index: 16;
 }
 #wb_MenuBar1
 {
@@ -585,138 +714,16 @@ input:focus, textarea:focus, select:focus
    visibility: hidden;
    z-index: 0;
 }
-@media only screen and (min-width: 1920px) and (max-width: 1920px)
+#wb_Shape3
 {
-body
-{
-   background-color: #FFFFFF;
-   background-image: none;
-}
-#wb_Shape2
-{
-   left: 0px;
-   top: 0px;
-   visibility: hidden;
-   display: none;
-   margin: 0;
-}
-#wb_Shape1
-{
-   left: 0px;
-   top: 0px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-}
-#wb_Image1
-{
-   left: 51px;
-   top: 11px;
-   width: 92px;
-   height: 52px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
-}
-#wb_MenuBar1
-{
-   left: 1129px;
-   top: 13px;
-   width: 747px;
-   height: 48px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-}
-#wb_Image3
-{
+   position: absolute;
    left: 39px;
-   top: 113px;
-   width: 1070px;
-   height: 585px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
+   top: 753px;
+   width: 215px;
+   height: 6px;
+   z-index: 11;
 }
-#wb_Image2
-{
-   left: 1129px;
-   top: 113px;
-   width: 707px;
-   height: 375px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
-}
-#wb_Image4
-{
-   left: 1129px;
-   top: 499px;
-   width: 707px;
-   height: 199px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
-}
-#wb_Text3
-{
-   left: 96px;
-   top: 582px;
-   width: 956px;
-   height: 41px;
-   visibility: visible;
-   display: inline;
-}
-#wb_Text3
-{
-   margin: 0;
-   padding: 0;
-}
-#wb_Text5
-{
-   left: 1165px;
-   top: 381px;
-   width: 635px;
-   height: 41px;
-   visibility: visible;
-   display: inline;
-}
-#wb_Text5
-{
-   margin: 0;
-   padding: 0;
-}
-#wb_Image5
-{
-   left: 1260px;
-   top: 536px;
-   width: 197px;
-   height: 113px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
-}
-#wb_Text7
-{
-   left: 1478px;
-   top: 543px;
-   width: 267px;
-   height: 118px;
-   visibility: visible;
-   display: inline;
-}
-#wb_Text7
-{
-   margin: 0;
-   padding: 0;
-}
-}
-@media only screen and (max-width: 1919px)
+@media only screen and (max-width: 1920px)
 {
 body
 {
@@ -843,6 +850,72 @@ body
 }
 #wb_Text7
 {
+   margin: 0;
+   padding: 0;
+}
+#wb_Shape3
+{
+   left: 16px;
+   top: 735px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_Text1
+{
+   left: 16px;
+   top: 687px;
+   width: 208px;
+   height: 46px;
+   visibility: visible;
+   display: inline;
+}
+#wb_Text1
+{
+   margin: 0;
+   padding: 0;
+}
+#wb_Image6
+{
+   left: 16px;
+   top: 752px;
+   width: 397px;
+   height: 184px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+   padding: 0;
+}
+#wb_Image7
+{
+   left: 16px;
+   top: 943px;
+   width: 399px;
+   height: 185px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+   padding: 0;
+}
+#wb_Image8
+{
+   left: 16px;
+   top: 1135px;
+   width: 399px;
+   height: 185px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+   padding: 0;
+}
+#wb_Image9
+{
+   left: 16px;
+   top: 1328px;
+   width: 399px;
+   height: 185px;
+   visibility: visible;
+   display: inline;
    margin: 0;
    padding: 0;
 }
