--- a/RVWWebsite.css
+++ b/RVWWebsite.css
@@ -92,6 +92,9 @@ h6, .h6
    color: #2E74B5;
    background-color: transparent;
 }
-@media only screen
+@media only screen and (min-width: 1920px)
+{
+}
+@media only screen and (max-width: 1919px)
 {
 }
