--- a/index.css
+++ b/index.css
@@ -46,21 +46,6 @@ input:focus, textarea:focus, select:focus
    border-width: 0;
    vertical-align: top;
 }
-#wb_Image1
-{
-   vertical-align: top;
-}
-#Image1
-{
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   left: 0;
-   top: 0;
-   width: 100%;
-   height: 100%;
-}
 #wb_Image3
 {
    vertical-align: top;
@@ -257,6 +242,336 @@ input:focus, textarea:focus, select:focus
    width: 100%;
    height: 100%;
 }
+#Shape4
+{
+   border-width: 0;
+   vertical-align: top;
+}
+#MenuBar1
+{
+   background-color: transparent;
+   border: 0px solid #CCCCCC;
+}
+.MenuBar1SubMenu
+{
+   background-color: transparent;
+   border: 0px solid #CCCCCC;
+   position:	absolute;
+   visibility: hidden;
+   overflow: visible;
+   z-index: 100;
+}
+.MenuBar1SubMenuTable
+{
+   cursor: default;
+   border: 0;
+   padding: 0;
+}
+.MenuBar1SubMenuTable tr
+{
+   margin: 0;
+   padding: 0;
+}
+.MenuBar1Menu
+{
+   background-color: transparent;
+   margin: 0px 0 0px 0px;
+   padding: 0;
+}
+.MenuBar1MenuOuter
+{
+   background-color: transparent;
+   border: 0px solid #CCCCCC;
+}
+.MenuBar1Menu tr
+{
+   margin: 0;
+   padding: 0;
+}
+.MenuBar1MainItem .MenuBar1MainItemLeft,
+.MenuBar1MainItem .MenuBar1MainFolderLeft
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   text-align: center;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1MainItem .MenuBar1MainItemText, 
+.MenuBar1MainItem .MenuBar1MainItemText a,
+.MenuBar1MainItem .MenuBar1MainFolderText,
+.MenuBar1MainItem .MenuBar1MainFolderText a
+{
+   background-color: transparent;
+   color: #FFFFFF;
+   font-size: 37px;
+   font-family: "Mont Heavy DEMO";
+   font-weight: normal;
+   font-style: normal;
+   line-height: 51px;
+   text-align: left;
+   text-decoration: none;
+   white-space: nowrap;
+   margin: 0;
+   cursor: pointer;
+   border-bottom: 0px solid #CCCCCC;
+   border-right: 0px solid #CCCCCC;
+   border-top: 0px solid #CCCCCC;
+   border-left: 0px solid #CCCCCC;
+   padding: 3px 25px 3px 5px;
+   vertical-align: middle;
+}
+.MenuBar1MainItem .MenuBar1MainItemRight,
+.MenuBar1MainItem .MenuBar1MainFolderRight
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1MainItemHover .MenuBar1MainItemLeft,
+.MenuBar1MainItemActive .MenuBar1MainItemLeft,
+.MenuBar1MainItemHover .MenuBar1MainFolderLeft,
+.MenuBar1MainItemActive .MenuBar1MainFolderLeft
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1MainItemHover .MenuBar1MainItemText,
+.MenuBar1MainItemActive .MenuBar1MainItemText,
+.MenuBar1MainItemHover .MenuBar1MainItemText a,
+.MenuBar1MainItemActive .MenuBar1MainItemText a,
+.MenuBar1MainItemHover .MenuBar1MainFolderText,
+.MenuBar1MainItemActive .MenuBar1MainFolderText,
+.MenuBar1MainItemHover .MenuBar1MainFolderText a,
+.MenuBar1MainItemActive .MenuBar1MainFolderText a
+{
+   background-color: transparent;
+   color: #FFFFFF;
+   font-size: 37px;
+   font-family: "Mont Heavy DEMO";
+   font-weight: normal;
+   font-style: normal;
+   line-height: 51px;
+   text-align: left;
+   text-decoration: none;
+   white-space: nowrap;
+   margin: 0;
+   cursor: pointer;
+   border-bottom: 0px solid #CCCCCC;
+   border-right: 0px solid #CCCCCC;
+   border-top: 0px solid #CCCCCC;
+   border-left: 0px solid #CCCCCC;
+   padding: 3px 25px 3px 5px;
+   vertical-align: middle;
+}
+.MenuBar1MainItemHover .MenuBar1MainItemRight,
+.MenuBar1MainItemActive .MenuBar1MainItemRight,
+.MenuBar1MainItemHover .MenuBar1MainFolderRight,
+.MenuBar1MainItemActive .MenuBar1MainFolderRight
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1MenuItem .MenuBar1MenuItemLeft,
+.MenuBar1MenuItem .MenuBar1MenuFolderLeft
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   text-align: center;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1MenuItem .MenuBar1MenuItemText, 
+.MenuBar1MenuItem .MenuBar1MenuItemText a,
+.MenuBar1MenuItem .MenuBar1MenuFolderText,
+.MenuBar1MenuItem .MenuBar1MenuFolderText a
+{
+   background-color: #FFFFFF;
+   color: #333333;
+   font-size: 13px;
+   font-family: Arial;
+   font-weight: normal;
+   font-style: normal;
+   line-height: 16px;
+   text-align: left;
+   text-decoration: none;
+   white-space: nowrap;
+   margin: 0;
+   cursor: pointer;
+   border-bottom: 0px solid #CCCCCC;
+   border-top: 0px solid #CCCCCC;
+   border-right: 0px solid #CCCCCC;
+   border-left: 0px solid #CCCCCC;
+   padding: 3px 5px 3px 5px;
+   vertical-align: middle;
+}
+.MenuBar1MenuItem .MenuBar1MenuItemRight,
+.MenuBar1MenuItem .MenuBar1MenuFolderRight
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1MenuItemHover .MenuBar1MenuItemLeft, 
+.MenuBar1MenuItemActive .MenuBar1MenuItemLeft,
+.MenuBar1MenuItemHover .MenuBar1MenuFolderLeft,
+.MenuBar1MenuItemActive .MenuBar1MenuFolderLeft
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1MenuItemHover .MenuBar1MenuItemText,
+.MenuBar1MenuItemActive .MenuBar1MenuItemText,
+.MenuBar1MenuItemHover .MenuBar1MenuItemText a,
+.MenuBar1MenuItemActive .MenuBar1MenuItemText a,
+.MenuBar1MenuItemHover .MenuBar1MenuFolderText,
+.MenuBar1MenuItemActive .MenuBar1MenuFolderText,
+.MenuBar1MenuItemHover .MenuBar1MenuFolderText a,
+.MenuBar1MenuItemActive .MenuBar1MenuFolderText a
+{
+   background-color: #337AB7;
+   color: #FFFFFF;
+   font-size: 13px;
+   font-family: Arial;
+   font-weight: normal;
+   font-style: normal;
+   line-height: 16px;
+   text-align: left;
+   text-decoration: none;
+   white-space: nowrap;
+   margin: 0;
+   cursor: pointer;
+   border-bottom: 0px solid #CCCCCC;
+   border-top: 0px solid #CCCCCC;
+   border-right: 0px solid #CCCCCC;
+   border-left: 0px solid #CCCCCC;
+   padding: 3px 5px 3px 5px;
+   vertical-align: middle;
+}
+.MenuBar1MenuItemHover .MenuBar1MenuItemRight,
+.MenuBar1MenuItemActive .MenuBar1MenuItemRight,
+.MenuBar1MenuItemHover .MenuBar1MenuFolderRight,
+.MenuBar1MenuItemActive .MenuBar1MenuFolderRight
+{
+   width: 0px;
+   cursor: pointer;
+   border-width: 0;
+   padding: 3px 0 3px 0;
+   font-size: 1px;
+}
+.MenuBar1SubMenu td,
+.MenuBar1Menu td,
+.MenuBar1Menu tr
+{
+   vertical-align: middle;
+}
+.MenuBar1MenuSplitText div
+{
+   height: 1px;
+   padding: 0;
+   background-color: #333333;
+   overflow: hidden;
+}
+.MenuBar1MenuItem .MenuBar1MenuSplitLeft
+{
+   height: 7px;
+   padding: 0;
+}
+.MenuBar1MenuItem .MenuBar1MenuSplitText
+{
+   background-color: #FFFFFF;
+   height: 7px;
+   padding: 0 6px 0 6px;
+}
+.MenuBar1MenuItem .MenuBar1MenuSplitRight
+{
+   height: 7px;
+   padding: 0;
+}
+.MenuBar1MainSplitText div
+{
+   background-color: #333333;
+   height: 1px;
+   padding: 0;
+   overflow: hidden;
+}
+.MenuBar1MainItem .MenuBar1MainSplitLeft 
+{
+   height: 7px;
+   padding: 0;
+}
+.MenuBar1MainItem .MenuBar1MainSplitText
+{
+   background-color: transparent;
+   height: 7px;
+   padding: 0;
+}
+.MenuBar1MainItem .MenuBar1MainSplitRight
+{
+   height: 7px;
+   padding: 0;
+}
+.MenuBar1MainItem
+{
+   vertical-align: middle;
+}
+.MenuBar1HorizontalSplit
+{
+   border-right: 0 solid #8080FF;
+   border-left: 0 solid #8080FF;
+   width: 35px;
+   background-color: transparent;
+   padding: 3px 0 3px 0;
+   vertical-align: middle;
+   text-align: center;
+   text-decoration: none;
+   color: #333333;
+   font-size: 37px;
+   font-family: "Mont Heavy DEMO";
+   font-style: normal;
+}
+.MenuBar1MainItem, .MenuBar1MainItemHover, .MenuBar1MainItemActive,
+.MenuBar1MenuItem, .MenuBar1MenuItemHover, .MenuBar1MenuItemActive
+{
+   white-space: nowrap;
+}
+.MenuBar1SpacerDiv
+{
+   background: transparent;
+   margin: 0;
+   padding: 0;
+   border: 0;
+   font-size: 1px;
+}
+#wb_MenuBar1
+{
+   z-index: 1111 !important;
+}
+#wb_Shape4
+{
+   position: absolute;
+   left: 757px;
+   top: 712px;
+   width: 192px;
+   height: 5px;
+   visibility: hidden;
+   z-index: 17;
+}
 #wb_Image10
 {
    position: absolute;
@@ -264,7 +579,7 @@ input:focus, textarea:focus, select:focus
    top: 11px;
    width: 92px;
    height: 52px;
-   z-index: 17;
+   z-index: 16;
 }
 #wb_Text1
 {
@@ -273,7 +588,7 @@ input:focus, textarea:focus, select:focus
    top: 719px;
    width: 267px;
    height: 46px;
-   z-index: 12;
+   z-index: 11;
 }
 #Shape1
 {
@@ -307,16 +622,12 @@ input:focus, textarea:focus, select:focus
    width: 956px;
    height: 72px;
    text-align: center;
-   z-index: 7;
+   z-index: 6;
 }
-#wb_Image1
+#Shape4
 {
-   position: absolute;
-   left: 51px;
-   top: 11px;
-   width: 92px;
-   height: 52px;
-   z-index: 3;
+   width: 192px;
+   height: 5px;
 }
 #wb_Image2
 {
@@ -325,7 +636,7 @@ input:focus, textarea:focus, select:focus
    top: 113px;
    width: 707px;
    height: 375px;
-   z-index: 5;
+   z-index: 4;
 }
 #wb_Text5
 {
@@ -335,7 +646,7 @@ input:focus, textarea:focus, select:focus
    width: 635px;
    height: 72px;
    text-align: center;
-   z-index: 8;
+   z-index: 7;
 }
 #wb_Image3
 {
@@ -344,7 +655,7 @@ input:focus, textarea:focus, select:focus
    top: 113px;
    width: 1070px;
    height: 585px;
-   z-index: 4;
+   z-index: 3;
 }
 #Shape5
 {
@@ -358,7 +669,7 @@ input:focus, textarea:focus, select:focus
    top: 499px;
    width: 707px;
    height: 199px;
-   z-index: 6;
+   z-index: 5;
 }
 #wb_Text7
 {
@@ -367,7 +678,7 @@ input:focus, textarea:focus, select:focus
    top: 561px;
    width: 267px;
    height: 88px;
-   z-index: 10;
+   z-index: 9;
 }
 #wb_Image5
 {
@@ -376,7 +687,7 @@ input:focus, textarea:focus, select:focus
    top: 554px;
    width: 155px;
    height: 88px;
-   z-index: 9;
+   z-index: 8;
 }
 #wb_Image6
 {
@@ -385,7 +696,7 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 13;
+   z-index: 12;
 }
 #wb_Image7
 {
@@ -394,7 +705,7 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 14;
+   z-index: 13;
 }
 #wb_Image8
 {
@@ -403,7 +714,7 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 15;
+   z-index: 14;
 }
 #wb_Image9
 {
@@ -412,7 +723,16 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 16;
+   z-index: 15;
+}
+#wb_MenuBar1
+{
+   position: absolute;
+   left: 1014px;
+   top: 8px;
+   width: 851px;
+   height: 59px;
+   z-index: 18;
 }
 #wb_Shape1
 {
@@ -441,7 +761,7 @@ input:focus, textarea:focus, select:focus
    top: 753px;
    width: 185px;
    height: 6px;
-   z-index: 11;
+   z-index: 10;
 }
 @media only screen and (max-width: 969px)
 {
@@ -473,17 +793,6 @@ body
    visibility: visible;
    display: inline;
    margin: 0;
-}
-#wb_Image1
-{
-   left: 51px;
-   top: 11px;
-   width: 92px;
-   height: 52px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
 }
 #wb_Image3
 {
@@ -575,14 +884,14 @@ body
 {
    left: 23px;
    top: 765px;
-   visibility: visible;
-   display: inline;
+   visibility: hidden;
+   display: none;
    margin: 0;
 }
 #wb_Text1
 {
-   left: 23px;
-   top: 719px;
+   left: 15px;
+   top: 734px;
    width: 208px;
    height: 46px;
    visibility: visible;
@@ -639,7 +948,7 @@ body
 }
 #wb_Image10
 {
-   left: 51px;
+   left: 192px;
    top: 11px;
    width: 92px;
    height: 52px;
@@ -647,5 +956,23 @@ body
    display: inline;
    margin: 0;
    padding: 0;
+}
+#wb_Shape4
+{
+   left: 16px;
+   top: 772px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+}
+#wb_MenuBar1
+{
+   left: 1014px;
+   top: 8px;
+   width: 851px;
+   height: 59px;
+   visibility: hidden;
+   display: none;
+   margin: 0;
 }
 }
